Prétraitement des données
 - Makefile : sélection de la base selon l'ilot et le type de capteur
 - preproc.py : regroupement des valeurs par moyenne, et annotation
 - annotationUnique.py : script des M2 qui fournit la note de confort
 - README.md : quelques explications
 - .gitignore : ignorer les *.csv et les dossiers __pycache__

--- a/workspace/data/Makefile
+++ b/workspace/data/Makefile
@@ -1,11 +1,9 @@
-# Prétraitement des données
+# Prétraitement des données : sélection sur l'ilot et le type de capteur
 #
-# Produit les fichiers grouped.<ilot>.<intervalle>.csv
-# ilot -- identifiant d'ilot
-# intervalle -- intervalle pour la moyenne, en secondes
-#
-# Enregistre la base allégée
-
+# Produit les partitions neo.<ilots>.<capteurs>.csv et neocampus.lite.csv
+#   ilot -- identifiants d'ilot séparés par des '-'
+#   capteurs -- type de capteur ou 'all'
+# 
 
 
 # Base originale
@@ -14,17 +12,14 @@ BASE_DATASET = All-All-2017-09-01_2018-09-01.csv
 # Base allégée
 LITE = neocampus.lite.csv
 
+# Dossier des partitions
+PDIR = parts
+
 # Fichiers de sortie
-# Actuellement, c'est déraisonnable d'espérer utiliser average.py 
-# sur les intervalles 'min' et 'sec'
-INTERVALS = day hour
+SENSORS = co2 hum lum temp
 ILOTS = ilot1 ilot2 ilot3 ouest n57 n79
-OUTPUT = $(foreach t, $(INTERVALS), $(foreach i, $(ILOTS), group.$(i).$(t).csv))
+OUTPUT = $(foreach t, $(SENSORS) all, $(foreach i, $(ILOTS), $(PDIR)/$(i).$(t).csv))
 
-
-
-# Moyenniseur
-EXE_AVG = python3 average.py
 
 
 
@@ -46,12 +41,13 @@ $(LITE): $(BASE_DATASET)
 	# Filtre, raccourcit et convertit les dates en timestamp 
 	# (cela peut prendre quelques minutes)
 	cat $^ |\
-	sed 's/erature//' | sed 's/idity//' | sed 's/inosity//' |\
 	awk -F ';' '{print $$6 ";" $$1 ";" $$4 ";" $$3;}' |\
+	sed 's/erature//' | sed 's/idity//' | sed 's/inosity//' |\
 	sed 's/^57;/n57;/' | sed 's/^79;/n79;/' |\
 	sed 's/\.......;/;/' |\
 	sed 's/-/ /g' | sed 's/:/ /g' | sed 's/T/ /' |\
 	awk -F ';' '{ print $$1 ";" $$2 ";" mktime($$3) ";" $$4; }' >> $@
+
 
 
 # Copie de la base lite (temporaire)
@@ -61,28 +57,40 @@ ilot.all.csv: $(LITE)
 # Séléction sur l'ilot (temporaire)
 ilot.%.csv: $(LITE)
 	head -n 1 $^ > $@
-	grep '^$*' $^ >> $@
+	grep '^\($(subst -,\|,$*)\)' $^ >> $@
 
-# Moyenne par seconde
-group.%.sec.csv: ilot.%.csv
-	$(EXE_AVG) $^ 1 #> $@
 
-# Moyenne par minute
-group.%.min.csv: ilot.%.csv
-	$(EXE_AVG) $^ 60 > $@
+$(PDIR)/%.co2.csv: ilot.%.csv | $(PDIR)
+	head -n 1 $^ > $@
+	grep 'co2' $^ >> $@ || echo "Pas de co2 dans $*" >&2
 
-# Moyenne par heure
-group.%.hour.csv: ilot.%.csv
-	$(EXE_AVG) $^ 3600 > $@
+$(PDIR)/%.hum.csv: ilot.%.csv | $(PDIR)
+	head -n 1 $^ > $@
+	grep 'hum' $^ >> $@ || echo "Pas de hum dans $*" >&2
 
-# Moyenne par jour
-group.%.day.csv: ilot.%.csv
-	$(EXE_AVG) $^ 86400 > $@
+$(PDIR)/%.lum.csv: ilot.%.csv | $(PDIR)
+	head -n 1 $^ > $@
+	grep 'lum' $^ >> $@ || echo "Pas de lum dans $*" >&2
+
+$(PDIR)/%.temp.csv: ilot.%.csv | $(PDIR)
+	head -n 1 $^ > $@
+	grep 'temp' $^ >> $@ || echo "Pas de temp dans $*" >&2
+
+$(PDIR)/%.all.csv: ilot.%.csv | $(PDIR)
+	cp $^ $@
+
+
+
+
+
+# Dossier des partitions
+$(PDIR):
+	mkdir -p $@
 
 
 
 clean:
-	rm -f ilot.*.csv group.*.csv
+	rm -fr ilot.*.csv $(PDIR)
 
 clean_base:
 	rm -f $(LITE)
